<resources>
    <string name="app_name">Aplicación hoja 6</string>
    <string name="action_settings">Settings</string>
    <string name="firstEj1">Primera opción oculta</string>
    <string name="secondEj1">Segunda opción oculta</string>
    <string name="title_activity_ejercicio3">Ejercicio3</string>
    <string name="openEj12">Abrir Activity 1_2</string>
    <string name="openEj3">Abrir Activity 3</string>
    <string name="title_activity_ejercicio4">Ejercicio4</string>
</resources>
