<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="arey.es.tema2_hoja6.Ejercicios1y2">
    <item
        android:id="@+id/plusEj1"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_input_add" />
    <item
        android:id="@+id/callEj1"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never|always"
        android:icon="@android:drawable/stat_sys_phone_call" />
    <item
        android:id="@+id/firstEj1"
        android:orderInCategory="100"
        android:title="@string/firstEj1"
        app:showAsAction="never" />
    <item
        android:id="@+id/secondEj1"
        android:orderInCategory="100"
        android:title="@string/secondEj1"
        app:showAsAction="never" />
    <item
        android:id="@+id/openEj12"
        android:orderInCategory="100"
        android:title="@string/openEj12"
        app:showAsAction="never" />
    <item
        android:id="@+id/openEj3"
        android:orderInCategory="100"
        android:title="@string/openEj3"
        app:showAsAction="never" />
</menu>
